- Recordings: Trigger a recording list update when the backend couldn't find the selected recording
- Fixed: potential out-of-bounds array access while accessing TV Card info
- Fixed: Hide smb password in debug xbmc.log file
- Added: support for retrieving channels from multiple specified groups (>1, < All groups) (requires TVServerXBMC build 122 or higher)

v1.8.8
- sync with PVR API v1.8.0

v1.7.8
- Bump after PVR API version bump

v1.6.8
- Channels: Use MediaPortal VisibleInGuide property as inverted IsHidden flag in XBMC. (requires TVServerXBMC build 120)
- Channelgroups: Don't import other channel groups when the user selected to import channels from a single group.
- TSReader: non-Windows: start playback as soon as the buffer file has a non-zero length
- Genre translation: seach also for the genre_translation.xml file in the profile folder.

v1.6.7
- Updated language files from Transifex

v1.6.6
- Added: Set recording play count on backend (requires TVServerXBMC build 118)
- Added: Enable/Disable support for individual programs on Series Schedules  (requires TVServerXBMC build 118)
- Timers: Fixed: MarginStart and MarginEnd are in minuted
- Timers: Fixed: Update and Delete of timers for series Schedules
- TSReader: additional debug/error messages on recording/timeshift buffer file access errors

v1.6.5
- Updated language files from Transifex

v1.6.4
- New version number by Team XBMC

v1.2.3.117
- Added: timeshift support for XBMC Frodo

v1.2.3.116:
- Fixed: playback of recordings with non-ASCII characters
- Added: Hungarian translation
- Added: Korean translation

v1.2.3.115:
- Changed: Switch to gettext (PO) files for addon translations

v1.2.3.114:
- Added: Live555 RTSP support for Linux

v1.2.3.113:
- Simplify settings. The TVServerXBMC plugin now reports the sharenames for the recordings and timeshift folder

v1.2.3.112:
- Merged: tsreader and ffmpeg addons are now combined into one addon

v1.2.2.111: